src/tests/snapshots/cclv__tests__view_snapshots__bug_entry_expand_last_session_after_click.snap
---
source: src/tests/view_snapshots.rs
expression: after_click_last.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_01DW7AVW3cYPEjGLyZesCcxS │ toolu_01K8kEwV7rgfGnhz2Uvxdmjr │ toolu_01TtbNRBcQWN8sTuNDK4Cu7T              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (50 entries) ▶────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│                                                                                                                      │
││  3 Let me break down the task:                                                                                      │
││                                                                                                                     │
││    1. I need to load the efficient-subagent-orchestration skill first                                               │
││    2. I need to claim ONE bead from the epic cclv-07v                                                               │
││    3. Complete it using TDD with subagents                                                                          │
││    4. Then STOP                                                                                                     │
││                                                                                                                     │
││    Let me start by loading the required skill and checking prerequisites.                                           │
│── ↓17.6k/36.0k ↑1/68 / $0.02 | Context: 36.0k (17%) ──                                                               │
││  4 I'll load the required skills and check prerequisites first.                                                     │
│── ↓17.6k/36.0k ↑1/1 / $0.02 | Context: 36.0k (17%) ──                                                                │
││  5 🔧  Tool: Skill                                                                                                   │
││      {                                                                                                              │
││        "skill": "efficient-subagent-orchestration"                                                                  │
││      }                                                                                                              │
│── ↓17.6k/36.0k ↑1/12 / $0.02 | Context: 36.0k (17%) ──                                                               │
││  6 🔧  Tool: Skill                                                                                                   │
││      {                                                                                                              │
││        "skill": "beads-project-tracking"                                                                            │
││      }                                                                                                              │
│── ↓17.6k/36.0k ↑1/9 / $0.02 | Context: 36.0k (17%) ──                                                                │
││  7 🔧  Tool: Bash                                                                                                    │
││      {                                                                                                              │
││        "command": ".specify/scripts/bash/check-prerequisites.sh --json 2>/dev/null || echo '{\"error\": \"script not│
││        "description": "Check prerequisites for feature"                                                             │
││      }                                                                                                              │
│── ↓17.6k/36.0k ↑1/43 / $0.02 | Context: 36.0k (17%) ──                                                               │
││  8 Launching skill: efficient-subagent-orchestration                                                                │
│                                                                                                                      │
││  9 Base directory for this skill: /home/claude/.claude/skills/efficient-subagent-orchestration                      │
││                                                                                                                     │
││    # Efficient Subagent Orchestration for Main Agent                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 24/24 │ Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
