src/tests/snapshots/cclv__tests__view_snapshots__bug_help_popup_after_scroll.snap
---
source: src/tests/view_snapshots.rs
expression: after_scroll.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└───────────┌ Keyboard Shortcuts ──────────────────────────────────┐───────────┘
┌Main [Opus]│  h/←         Scroll left (for long lines)            │───────────┐
││  1 Minima│  l/→         Scroll right                            │           │
│── ↓1/1 ↑1/│  Ctrl+d/Page Down Page down                          │           │
│           │  Ctrl+u/Page Up   Page up                            │           │
│           │  g/Home      Go to top                               │           │
│           │  G/End       Go to bottom                            │           │
│           │                                                      │           │
│           │Pane Focus                                            │           │
│           │  Tab         Cycle focus between panes               │           │
│           │  1           Focus main agent pane                   │           │
│           │  2           Focus subagent pane                     │           │
│           │  3           Focus stats panel                       │           │
│           │                                                      │           │
│           │Tabs (Subagent Pane)                                  │           │
│           └─────────────── Press Esc or ? to close ──────────────┘           │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
