src/tests/snapshots/cclv__tests__view_snapshots__bug_help_popup_not_triggered.snap
---
source: src/tests/view_snapshots.rs
expression: output.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main [Opus] (6 entries)───────────────────────────────────────────────────────┐
│           ┌ Keyboard Shortcuts ──────────────────────────────────┐           │
││  2 Hello │Navigation                                            │           │
│           │  j/↓         Scroll down                             │           │
││  3 Hi the│  k/↑         Scroll up                               │           │
│           │  h/←         Scroll left (for long lines)            │           │
││  4 Can yo│  l/→         Scroll right                            │           │
│           │  Ctrl+d/Page Down Page down                          │           │
││  5 Of cou│  Ctrl+u/Page Up   Page up                            │           │
│           │  g/Home      Go to top                               │           │
││  6 Thanks│  G/End       Go to bottom                            │           │
│           │                                                      │           │
│           │Pane Focus                                            │           │
│           │  Tab         Cycle focus between panes               │           │
│           │  1           Focus main agent pane                   │           │
│           │  2           Focus subagent pane                     │           │
│           │  3           Focus stats panel                       │           │
│           │                                                      │           │
│           │Tabs (Subagent Pane)                                  │           │
│           │  [/Shift+Tab Previous tab                            │           │
│           │  ]           Next tab                                │           │
│           │  1-9         Select tab by number                    │           │
│           │                                                      │           │
│           │Message Interaction                                   │           │
│           │  Enter/Space Toggle expand/collapse message          │           │
│           │  e           Expand all messages                     │           │
│           │  c           Collapse all messages                   │           │
│           │                                                      │           │
│           │Search                                                │           │
│           │  //Ctrl+f    Start search                            │           │
│           │  Ctrl+s      Submit search                           │           │
│           │  Esc         Cancel search                           │           │
│           └─────────────── Press Esc or ? to close ──────────────┘           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
