src/tests/snapshots/cclv__tests__view_snapshots__bug_help_popup_scroll_after.snap
---
source: src/tests/view_snapshots.rs
expression: after_scroll.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main         ┌ Keyboard Shortcuts ────────────────────────────────────────────────┐              │
└──────────────│Navigation                                                          │──────────────┘
┌Main [Opus] (1│  j/↓         Scroll down                                           │──────────────┐
││  4 Second me│  k/↑         Scroll up                                             │              │
│              │  h/←         Scroll left (for long lines)                          │              │
││  5 Response │  l/→         Scroll right                                          │              │
│              │  Ctrl+d/Page Down Page down                                        │              │
││  6 Third mes│  Ctrl+u/Page Up   Page up                                          │              │
│              │  g/Home      Go to top                                             │              │
││  7 Response │  G/End       Go to bottom                                          │              │
│              │                                                                    │              │
││  8 Fourth me└────────────────────── Press Esc or ? to close ─────────────────────┘              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
