src/tests/snapshots/cclv__tests__view_snapshots__bug_horizontal_scroll_no_effect.snap
---
source: src/tests/view_snapshots.rs
expression: scrolled_output
---
┌Conversations─────────────────────────────────────────────┐
│ Main Agent                                               │
└──────────────────────────────────────────────────────────┘
┌◀ Main Agent (1 entries) ▶────────────────────────────────┐
││  1                                                      │
││                                                         │
││    mplete/content/MARKER_END_OF_LINE.txt"               │
││                                                         │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
[LIVE] Wrap: Off | q: Quit | ?: Help | /: Search
